syntax = "proto3";
package product;
option go_package = "/proto";


service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc ProductList (ListProductRequest) returns (ListProductResponse);
    rpc ProductByID (RequestProductID) returns (SingleProductResponse);
    rpc UpdateProduct (RequestProductUpdate) returns (SingleProductResponse);
    rpc DeleteProduct (RequestProductID) returns (DeleteProductResponse);
}


message Product{
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock_qty = 5;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    int32 stock_qty = 4;
}

message CreateProductResponse {
    string message = 1;
}

message ListProductRequest {

}

message ListProductResponse {
    repeated Product products = 1;
}

message RequestProductUpdate {
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock_qty = 5;
}

message  SingleProductResponse {
   Product product = 1;
}

message RequestProductID {
    int32 id = 1;
}

message DeleteProductResponse {
   string message = 1;
}